<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finalinput"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="75dp"
        android:fontFamily="@font/sniglet"
        android:text="@string/InfoTitle3"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="121dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/sniglet"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        android:textColor="#fefce6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText16" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="168dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/sniglet"
        android:hint="@string/code_langauge"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="@font/sniglet"
        android:hint="@string/Adjective1"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="197dp"
        android:layout_height="57dp"
        android:ems="10"
        android:fontFamily="@font/sniglet"
        android:hint="@string/ProfessorName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="195dp"
        android:layout_height="53dp"
        android:ems="10"
        android:fontFamily="@font/sniglet"
        android:hint="@string/Adjective2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:ems="10"
        android:fontFamily="@font/sniglet"
        android:hint="@string/Noun1"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText14" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:ems="10"
        android:fontFamily="@font/sniglet"
        android:hint="@string/Noun2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText15" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="71dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="-5dp"
        android:fontFamily="@font/sniglet_extrabold"
        android:text="Coding"
        android:textAlignment="center"
        android:textColor="#494848"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/sniglet"
        android:text="@string/InfoTitle1"
        android:textColor="#494848"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>